k8sIngress_web-front.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web-front
spec:
  rules:
    - host: ako.vmw.avidemo.fr
      http:
        paths:
          - backend:
              serviceName: web-front1
              servicePort: 80
            path: /v1
          - backend:
              serviceName: web-front2
              servicePort: 80
            path: /v2
          - backend:
              serviceName: web-front3
              servicePort: 80
            path: /v3
